--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Cypress-io",
   "license": "ISC",
   "devDependencies": {
+    "cypress": "^13.3.2"
   },
   "repository": {
     "type": "git",
